<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_style_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NotificacaoAlertActivity" >

    <include layout="@layout/navigation_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

                <TextView
                    style="@style/wrap_height_wrap_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/box_atendimento_capitais"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btnAtendimentoCapitais"
                    style="@style/orange_button_wide"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/btn_atendimento_capitais" />

                <TextView
                    style="@style/wrap_height_wrap_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/box_atendimento_demais_localidades"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btnAtendimentoDemaisLocalidades"
                    style="@style/orange_button_wide"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/btn_atendimento_demais_localidades" />

                <TextView
                    style="@style/wrap_height_wrap_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/box_atendimento_assistencia_24h_auto_vida"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btnAtendimentoAutoVida"
                    style="@style/orange_button_wide"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/btn_atendimento_assistencia_24h_auto_vida" />

                <TextView
                    style="@style/wrap_height_wrap_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/box_atendimento_assistencia_24h_empresas_residencias"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btnAtendimentoEmpRes"
                    style="@style/orange_button_wide"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/btn_atendimento_assistencia_24h_empresas_residencias" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>