<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2010, Liberty Mutual Proprietary and Confidential All Rights Reserved -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/table_layout"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/address_section"
        style="@style/wrap_height_fill_width" >

        <EditText
            android:id="@+id/street_address"
            style="@style/edit_text"
            android:hint="@string/address_label"
            android:inputType="textCapWords|textFilter"
            android:maxLength="50"
            android:nextFocusDown="@+id/city" />
    </TableLayout>

    <TableLayout
        android:id="@+id/city_section"
        style="@style/wrap_height_fill_width" >

        <EditText
            android:id="@+id/city"
            style="@style/edit_text"
            android:hint="@string/city_label"
            android:inputType="textFilter"
            android:maxLength="30"
            android:nextFocusDown="@+id/zipcode" />
    </TableLayout>

    <TableLayout
        android:id="@+id/zip_code_section"
        style="@style/wrap_height_fill_width" >

        <EditText
            android:id="@+id/zip_code"
            style="@style/edit_text"
            android:hint="@string/zip_code_label"
            android:inputType="number"
            android:maxLength="9" />
    </TableLayout>

</LinearLayout>