<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".CadastroSeguradoActivity" >

    <include android:id="@+id/include" layout="@layout/new_navigation_bar"/>

    <ScrollView android:id="@+id/cadastro_form" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include"
        android:fillViewport="false">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">

            <!--cadastro_aviso_mec-->

            <View android:layout_width="match_parent" android:layout_height="15dp" />
            <TextView
                android:id="@+id/tvw_aviso_mec"
                style="@style/tvw_aviso_mec"
                android:text="@string/cadastro_aviso_mec"
                android:enabled="false"
                android:focusable="false" />

            <!--<EditText android:id="@+id/editNomeClienteCadastro"</EditText>-->

            <include android:id="@+id/editApoliceCadastro" layout="@layout/ls_textfield" />

            <include android:id="@+id/editCPFCadastro" layout="@layout/ls_textfield"/>

            <include android:id="@+id/editEmailCadastro" layout="@layout/ls_textfield"/>
            <include android:id="@+id/editConfirmarEmailCadastro" layout="@layout/ls_textfield"/>

            <View android:layout_width="match_parent" android:layout_height="15dp" />
            <TextView android:id="@+id/tvw_aviso_senha"
                style="@style/tvw_aviso_mec"
                android:text="@string/cadastro_aviso_senha"
                android:enabled="false"
                android:focusable="false" />

            <include android:id="@+id/editSenhaCadastro" layout="@layout/ls_textfield"/>
            <include android:id="@+id/editConfirmarSenhaCadastro" layout="@layout/ls_textfield"/>

            <View android:layout_width="match_parent" android:layout_height="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox android:id="@+id/cbx_cadastro"
                    android:text="@string/concordo_com_os"
                    android:textSize="11sp"
                    android:textColor="@color/nofoco"
                    android:maxLines="1"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:button="@drawable/cbx_cadastro"
                    android:paddingLeft="4dp" />

                <Button android:id="@+id/btnPoliticaPrivacidade"
                    android:text="@string/termos_condicoes"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/btn_background"
                    android:background="@drawable/selector_home_links"
                    android:textSize="11sp"
                    android:singleLine="true"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvw_cbx_cadastro"
                style="@style/tvw_cadastro"
                android:text="@string/concorde_com_os_termos"
                android:enabled="false"
                android:focusable="false"
                android:visibility="gone"/>

            <View android:layout_width="match_parent" android:layout_height="15dp" />
            <Button android:id="@+id/btn_registrar" style="@style/btn_registrar" android:text="@string/registrar"/>
            <View android:layout_width="match_parent" android:layout_height="15dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>