<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2010, Liberty Mutual Proprietary and Confidential All Rights Reserved -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout02"
    style="@style/main_content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/navigation_bar" />

    <FrameLayout
        style="@style/wrap_height_fill_width"
        android:layout_weight="1" >

        <ScrollView style="@style/wrap_height_fill_width" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:id="@+id/rl_other_drivers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:id="@+id/ll_other_drivers"
                        style="@style/collect_contacts_header"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/textView1"
                            style="@style/collect_contacts_header_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:text="@string/other_drivers_heading" >
                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/other_driver_list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll_other_drivers"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_add_other_driver_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/other_driver_list"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="5dip"
                        android:gravity="center_horizontal" >

                        <Button
                            android:id="@+id/add_other_driver_button"
                            style="@style/add_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_adicionar" >
                        </Button>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_witnesses"
                        style="@style/collect_contacts_header"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll_add_other_driver_button"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/collect_contacts_header_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:text="@string/witnesses_heading" >
                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/witness_list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll_witnesses"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_add_witness_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/witness_list"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="5dip"
                        android:gravity="center_horizontal" >

                        <Button
                            android:id="@+id/add_witness_button"
                            style="@style/add_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_adicionar" >
                        </Button>
                    </LinearLayout>
                    
                    <LinearLayout
                        android:id="@+id/ll_police_information"
                        style="@style/collect_contacts_header"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll_add_witness_button"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/textView5"
                            style="@style/collect_contacts_header_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:text="@string/police_info_heading" >
                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/police_info_list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll_police_information" 
                        android:orientation="horizontal">
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_add_police_information_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/police_info_list"
                        android:layout_marginBottom="5dip"
                        android:layout_marginTop="5dip"
                        android:gravity="center_horizontal">

                        <Button
                            android:id="@+id/add_police_info_button"
                            style="@style/add_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_adicionar" >
                        </Button>
                    </LinearLayout>
                    
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</LinearLayout>